[package]
name        = "byond"
version     = "0.1.0"
authors     = ["PJB3005 <pieterjan.briers@gmail.com>"]
description = "A crate for interfacing with the BYOND game engine."
readme      = "README.md"
keywords    = ["DM", "BYOND"]
license     = "MIT"

[lib]
name        = "byond"
crate-type  = ["staticlib"]

[dependencies]
libc        = "0.2.19"
lazy_static = "0.2.2"
